@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.23-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-23 14:06:34, took 00:13:36, with 50 workers, on 4062 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-10-23 15:04:30, took 00:14:29, with 50 workers, on 4064 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -450,6 +450,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tcp06.tst">conn-tcp06.tst</a></td><td>success</td><td>ppp over tcp without ecn</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tcp07.tst">conn-tcp07.tst</a></td><td>success</td><td>ppp over tcp with timestamp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tcp08.tst">conn-tcp08.tst</a></td><td>success</td><td>ppp over tcp without timestamp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp09.tst">conn-tcp09.tst</a></td><td>success</td><td>ppp over tcp with winscale</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-tcp10.tst">conn-tcp10.tst</a></td><td>success</td><td>ppp over tcp without winscale</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou01.tst">conn-tdmou01.tst</a></td><td>success</td><td>tdmoudp with middle channels</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou02.tst">conn-tdmou02.tst</a></td><td>success</td><td>ppp with tdmoudp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-tdmou03.tst">conn-tdmou03.tst</a></td><td>success</td><td>hdlc with tdmoudp</td></tr>
